test/subjects/errors/isset_of_ref.php
<?php
  echo isset(&$a); // { phc-error: syntax error, unexpected '&', expecting T_STRING or T_VARIABLE or '$' }
?>
